<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.saurabh.java</groupId>
    <artifactId>JavaCon</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>15.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.9</source>
                    <target>1.9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>SpecialKeywords</module>
        <module>Array</module>
        <module>Interfaces</module>
        <module>Inheritance</module>
        <module>Polymorphism</module>
        <module>InnerClass</module>
        <module>Exception</module>
        <module>Generics</module>
        <module>Collections</module>
        <module>Concurrency</module>
        <module>Reflection</module>
        <module>DesignPatterns</module>
        <module>JDBC</module>
        <module>JavaKathy</module>
        <module>JavaDS</module>
        <module>IO</module>
        <module>JsonIO</module>
        <module>Java8Lambda</module>
        <module>Java9Optional</module>
        <module>Java9OtherUpdates</module>

    </modules>
</project>